--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.16.7",
     "@mui/material": "^5.16.7",
     "@stripe/stripe-js": "^4.3.0",
+    "cohere-ai": "^7.12.1",
     "firebase": "^10.13.0",
     "next": "14.2.5",
     "openai": "^4.56.0",
