--- a/package.json
+++ b/package.json
@@ -10,17 +10,17 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.3.1",
-    "@emotion/react": "^11.13.0",
+    "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^5.16.7",
     "@mui/material": "^5.16.7",
     "@stripe/stripe-js": "^4.3.0",
     "cohere-ai": "^7.12.1",
     "firebase": "^10.13.0",
-    "next": "14.2.5",
+    "next": "^14.2.6",
     "openai": "^4.56.0",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "stripe": "^16.8.0"
   },
   "devDependencies": {
